# odp-platform-common

./: .gitignore  .gitmodules  AGENTS.md  Cargo.toml  NOTICE  README.md  SECURITY.md
.github/: copilot-instructions.md
.github/workflows/: cargo-vet-pr-comment.yml  cargo-vet.yml  check.yml  uefi-check.yml
common/supply-chain/: audits.toml  config.toml
ec/: Cargo.toml  deny.toml
ec-test-app/: .gitmodules
ec-test-app/rust/: Cargo.toml
ec-test-cli/: Cargo.toml
ec-test-lib/: README.md
ec-test-lib/src/: serial.rs
ec-test-tui/: Cargo.toml  README.md
ec/test-cli/: Cargo.toml  README.md
ec/test-cli/src/: cli.rs  debug.rs  main.rs
ec/test-lib/: Cargo.toml  README.md
ec/test-lib/src/: acpi.rs  common.rs  lib.rs  mock.rs  serial.rs
ec/test-lib/src/os/: linux.rs  mod.rs  windows.rs
ec/test-script/: Cargo.toml
ec/test-script/src/: exec.rs  parser.rs
ec/test-tui/: Cargo.toml  README.md
ec/test-tui/src/: app.rs  battery.rs  common.rs  logging.rs  main.rs  rtc.rs  source.rs  state.rs  system.rs  thermal.rs  updater.rs
uefi/OdpPkg/: OdpPkg.dec
uefi/OdpPkg/Drivers/IntegratedDxeDemo_ru/: Cargo.toml  RustUartDxeDemo.inf
uefi/OdpPkg/Drivers/IntegratedDxeDemo_ru/.cargo/: config.toml
uefi/OdpPkg/Drivers/ODP_PatinaSmbiosDemo/: Cargo.toml  README.md  rust-toolchain.toml
uefi/OdpPkg/Drivers/ODP_PatinaSmbiosDemo/src/: main.rs  platform.rs
uefi/OdpPkg/Drivers/ODP_RustDxeDemo/: Cargo.toml  ODP_RustDxeDemo.inf  README.md
uefi/OdpPkg/Drivers/ODP_RustDxeDemo/src/: main.rs
uefi/OdpPkg/Drivers/StandaloneDxeDemo_ru/: Cargo.toml  README.md
uefi/OdpPkg/Drivers/StandaloneDxeDemo_ru/.cargo/: config.toml
uefi/OdpPkg/Drivers/StandaloneDxeDemo_ru/src/: main.rs
uefi/OdpPkg/Include/: README.md
uefi/crates/patina_boot/: .gitignore  Cargo.toml  rust-toolchain.toml  rustfmt.toml
uefi/crates/patina_boot/benches/: orchestrator.rs
uefi/crates/patina_boot/src/: boot_dispatcher.rs  boot_orchestrator.rs  config.rs  connect_controller.rs  helpers.rs  lib.rs  orchestrators.rs  strategies.rs
uefi/crates/patina_boot/src/orchestrators/: simple_boot_manager.rs
uefi/crates/patina_boot/src/strategies/: connect_all.rs
uefi/crates/patina_sre/: Cargo.toml  README.md  rust-toolchain.toml  rustfmt.toml
uefi/crates/patina_sre/src/: bp_recovery.rs  hotkey.rs  lib.rs  sre_boot_manager.rs
uefi/crates/patina_tianocore/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
uefi/crates/patina_tianocore/src/: boot_services.rs  context.rs  entry.rs  lib.rs  logger.rs  macro_support.rs  memory.rs  platform.rs  prelude.rs
uefi/crates/patina_tianocore/tests/: dispatch_test.rs
