[workspace]
members = ["ec-test-lib", "ec-test-tui"]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/OpenDevicePartnership/odp-platform-common"
rust-version = "1.88"

[workspace.lints.clippy]
suspicious = "forbid"
correctness = "forbid"
perf = "forbid"
style = "forbid"

[workspace.dependencies]
time-alarm-service-messages = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0" }
battery-service-messages = { git = "https://github.com/OpenDevicePartnership/embedded-services", branch = "v0.2.0" }
embedded-mcu-hal = { git = "https://github.com/OpenDevicePartnership/embedded-mcu" }
