# Workspace is typically not defined, but because this tree has a workspace in the root, cargo needs to have an empty [workspace] entry
# here to indicate the tree workspace should not be used.
[workspace]

[package]
  name = "ODP_RustDxeDemo"
  version = "0.1.0"
  edition = "2021"

[dependencies]
  log = "0.4"
  r-efi = "6.0.0"
  spin = "0.9.8"
  uart_16550 = "0.3.2"
  heapless = "0.9.1"